--- a/Introduction/recipes/templates/recipes/sobre.html
+++ b/Introduction/recipes/templates/recipes/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Vitor Kruel">
-    <title>Recipes</title>
+    <title>Sobre</title>
 </head>
 <body>
     <h1>Olá, {{nome}}</h1> 
