Mudando o search para um html na pasta partials.

--- a/Introduction/recipes/templates/recipes/pages/home.html
+++ b/Introduction/recipes/templates/recipes/pages/home.html
@@ -2,14 +2,8 @@
 
 <body>
     {% include 'recipes/partials/header.html' %}
-    <section class="search-container">
-        <div class="container">
-            <form action="" method="get" class="search-form">
-                <input type="search"  class="search-input" name="search" id="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
-        </div>
-    </section>
+    {% include 'recipes/partials/search.html' %}
+
 </body>
 
 </html>
