--- a/Introduction/recipes/templates/recipes/pages/home.html
+++ b/Introduction/recipes/templates/recipes/pages/home.html
@@ -4,6 +4,11 @@
     {% include 'recipes/partials/header.html' %}
     {% include 'recipes/partials/search.html' %}
 
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            {% include 'recipes/partials/recipe.html' %}
+        </div>
+    </main>
 </body>
 
 </html>
