--- a/Introduction/recipes/templates/recipes/partials/recipe.html
+++ b/Introduction/recipes/templates/recipes/partials/recipe.html
@@ -1,12 +1,14 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://via.placeholder.com/1280x720.png/296fe6" alt="Temporario">
+        <a href="{% url 'recipes-recipe' recipe.id %}">
+            <img src="{{recipe.cover.url}}" alt="Temporario">
+        </a>
     </div>
 
     <div class="recipe-title-container">
         <h2 class="recipe-title">
-            <a href="">
-                Lorem ipsum dolor sit amet
+            <a href="{% url 'recipes-recipe' recipe.id %}">
+                {{ recipe.title }}
             </a>
         </h2>
     </div>
@@ -14,27 +16,23 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Vitor Kruel
+            {{ recipe.author.first_name }}  {{ recipe.author.last_name }}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2021 às 11:21
+            {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha/">
                 <i class="fas fa-layer-group"></i>
-                <span>Café da manhã</span>
+                <span>{{ recipe.category.name}}</span>
             </a>
         </span>
     </div>
 
     <div class="recipe-content">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Ex animi eveniet incidunt asperiores atque? 
-            Odio repudiandae saepe earum distinctio, eum 
-            aperiam illum quos molestias vel labore inventore
-            ratione at facere!
+            {{recipe.description}}
         </p>
     </div>
 
@@ -42,7 +40,7 @@
         <div class="recipe-meta recipe-preparation">
             <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
             <div class="recipe-meta-text">
-                0 Minutos
+                {{recipe.preparation_time}} {{recipe.preparation_time_unit}}
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
@@ -51,15 +49,23 @@
                 Porções
             </h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{recipe.servings}} {{recipe.servings_unit}}
             </div>
         </div>
     </div>
 
-    <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+    {% if not is_detail_page %}
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+    {% endif %}
+
+    {% if is_detail_page %}
+        <div class="preparation-steps">
+            {{recipe.preparation_steps|linebreaksbr}}
+        </div>
+    {% endif %}
 </div>
