--- a/Introduction/recipes/templates/recipes/partials/recipe.html
+++ b/Introduction/recipes/templates/recipes/partials/recipe.html
@@ -56,7 +56,7 @@
 
     {% if not is_detail_page %}
         <footer class="recipe-footer">
-            <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+            <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes-recipe' recipe.id %}">
                 <i class="fas fa-eye"></i>
                 <span>ver mais...</span>
             </a>
