--- a/Introduction/recipes/templates/recipes/partials/recipe.html
+++ b/Introduction/recipes/templates/recipes/partials/recipe.html
@@ -79,7 +79,11 @@
 
     {% if is_detail_page %}
         <div class="preparation-steps">
-            {{recipe.preparation_steps|linebreaksbr}}
+            {% if recipe.preparation_step_is_html %}
+                {{ recipe.preparation_step|safe }}
+            {% else %}    
+                {{ recipe.preparation_step|linebreaksbr }}
+            {% endif %}
         </div>
     {% endif %}
 </div>
