--- a/Introduction/static/recipes/css/style.css
+++ b/Introduction/static/recipes/css/style.css
@@ -167,6 +167,7 @@ h6 {
 
 .recipe-list-item {
     max-width: 64rem;
+    height: fit-content;
 }
 
 .recipe-list-item:hover {
@@ -247,6 +248,21 @@ h6 {
     filter: brightness(1.6);
 }
 
+.main-content-detail .recipe-list-item {
+    max-width: 84rem;
+    margin: 0 auto;
+  }
+  
+.main-content-detail .recipe-list-item:hover {
+    transform: scale(1);
+    box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+.preparation-steps {
+    padding: var(--spacing-gutter-medium);
+}
+
 .main-footer {
     display: flex;
     align-items: center;
@@ -264,4 +280,18 @@ h6 {
 
 .main-footer a:hover {
     filter: brightness(.8);
+}
+
+
+.preparation-steps h1,
+.preparation-steps h2,
+.preparation-steps h3,
+.preparation-steps h4,
+.preparation-steps h5,
+.preparation-steps h6,
+.preparation-steps p,
+.preparation-steps ol,
+.preparation-steps ul,
+.preparation-steps pre {
+    margin: 2rem 0;
 }
