Entendendo quando usar o get_list_or_404 ou usar o método padrão de buscas no DB (objects).

--- a/Introduction/recipes/static/recipes/css/style.css
+++ b/Introduction/recipes/static/recipes/css/style.css
@@ -299,3 +299,16 @@ h6 {
     margin: 2rem;
     padding: 0 2rem;
 }
+
+/* Generica */
+.center {
+    text-align: center;
+}
+
+.margem-x {
+    margin: 0 var(--spacing-gutter-medium);
+}
+
+.margem-y {
+    margin: var(--spacing-gutter-medium) 0;
+}
