Adicionando no context na view.

--- a/recipes/templates/recipes/partials/search.html
+++ b/recipes/templates/recipes/partials/search.html
@@ -1,7 +1,7 @@
 <section class="search-container">
     <div class="container">
-        <form action="" method="get" class="search-form">
-            <input type="search"  class="search-input" name="search" id="search">
+        <form action="{% url 'recipes:search' %}" method="get" class="search-form">
+            <input type="search"  class="search-input" name="search" id="search" value="{{ search_term }}" required>
             <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
         </form>
     </div>
