--- a/recipes/static/recipes/css/style.css
+++ b/recipes/static/recipes/css/style.css
@@ -324,6 +324,12 @@ h6 {
 }
 
 /* Messages */
+.messages-container {
+    display: flex;
+    flex-flow: column wrap;
+    gap: calc(var(--spacing-gutter-medium) / 2);
+}
+
 .message {
     padding: 1rem;
     border-radius: 4px;
@@ -380,4 +386,12 @@ h6 {
 
 .margem-y {
     margin: var(--spacing-gutter-medium) 0;
+}
+
+
+
+@media (max-width: 600px) {
+    .main-content-list {
+        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    }
 }
