--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -29,6 +29,16 @@
                     </div>    
                 {% endfor %}
             </div>
+            
+            {% if form.errors %}
+                <div class="form-content form-content-grid"> 
+                    <div class="form-group">
+                        <div class="message message-error">
+                            There are erros in the form, please fix them and send again.
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
 
             <div class="form-content form-content-grid"> 
                 <div class="form-group">
