--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -6,6 +6,10 @@
     <div class="main-content center container">
         <h2>Register</h2>
     </div>
+    
+    <div class="main-content" style="max-width: 64rem; margin:auto">
+        {% include 'recipes/partials/messages.html' %}
+    </div>
 
     <div class="main-content container">
         <form action="{% url 'authors:create' %}" method='POST'>  
