--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -8,49 +8,12 @@
     </div>
     
     <div class="main-content" style="max-width: 64rem; margin:auto">
-        {% include 'recipes/partials/messages.html' %}
+        {% include 'global/partials/messages.html' %}
     </div>
 
-    <div class="main-content container">
-        <form action="{% url 'authors:create' %}" method='POST'>  
-            {% csrf_token %}
+    {% include 'global/partials/form.html' %}
 
-            <div class="form-content form-content-grid">
-                {% for field in form %}
-                    <div class="form-group">
-                        <label for="{{ field.id_for_label }}">
-                            {{ field.label }}
-                        </label>
-                        {{field}}
 
-                        {% if field.help_text %}
-                            <p class="help-test">
-                                {{field.help_text}}
-                            </p>
-                        {% endif %}
-
-                        {{ field.errors }}
-                    </div>    
-                {% endfor %}
-            </div>
-            
-            {% if form.errors %}
-                <div class="form-content form-content-grid"> 
-                    <div class="form-group">
-                        <div class="message message-error">
-                            There are erros in the form, please fix them and send again.
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-
-            <div class="form-content form-content-grid"> 
-                <div class="form-group">
-                    <button type="submit">Send</button>
-                </div>
-            </div>
-        </form>
-    </div>
 {% endblock content %}
 
 
