--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -6,10 +6,19 @@
     <div class="main-content center container">
         <h2>Login</h2>
         {% if request.user.is_authenticated %}
-            <p>
+            <div>
                 Your are logged in with
                 {{ request.user.first_name }}
-            </p>
+                Please,
+                <form class="inline-form" action="{% url 'authors:logout' %}"> 
+                    {% csrf_token %}
+                    <input type="hidden" name="username" value="{{ request.user.username }}">
+                    <button class="plaintext-button" type="submit">
+                        Click here
+                    </button>
+                </form> to logout
+            </div>
+
         {% endif %}
     </div>
     
