--- a/base_templates/global/partials/search.html
+++ b/base_templates/global/partials/search.html
@@ -1,8 +1,18 @@
 <section class="search-container">
     <div class="container">
         <form action="{% url 'recipes:search' %}" method="get" class="search-form">
-            <input type="search"  class="search-input" name="search" id="search" value="{{ search_term }}" required>
-            <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
+            <input 
+                type="search"  
+                class="search-input" 
+                name="search" 
+                id="search" 
+                value="{{ search_term }}" 
+                placeholder="Search for a recipe..."
+                required
+                >
+            <button type="submit" class="search-button">
+                <i class="fas fa-search"></i>
+            </button>
         </form>
     </div>
 </section>
