Criando o página do dashboard da administração do authors.

--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -5,21 +5,7 @@
 {% block content %}
     <div class="main-content center container">
         <h2>Login</h2>
-        {% if request.user.is_authenticated %}
-            <div>
-                Your are logged in with
-                {{ request.user.username }}.
-                Please,
-                <form class="inline-form" action="{% url 'authors:logout' %}"> 
-                    {% csrf_token %}
-                    <input type="hidden" name="username" value="{{ request.user.username }}">
-                    <button class="plaintext-button" type="submit">
-                        Click here
-                    </button>
-                </form> to logout
-            </div>
-
-        {% endif %}
+        {% include 'authors/partials/login_message.html' %}
     </div>
     
     <div class="main-content" style="max-width: 64rem; margin:auto">
