--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -426,7 +426,11 @@ h6 {
     background: var(--color-debug-light);
     color: var(--color-debug-dark);
   }
-
+  
+/* Authors */
+.login-message {
+    margin: 1rem 0;
+  }
 
 /* Generica */
 .center {
