--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -12,7 +12,9 @@
         {% include 'global/partials/messages.html' %}
     </div>
 
-    {% include 'global/partials/form.html' %}
+    {% if not user.is_authenticated %}
+        {% include 'global/partials/form.html' %}
+    {% endif %}
 
 
 {% endblock content %}
