--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -343,7 +343,9 @@ h6 {
     color: var(--color-error-dark);
 }
 
-.form-content input {
+.form-content input,
+.form-content textarea,
+.form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: .4rem;
@@ -365,6 +367,10 @@ h6 {
 
 .inline-form {
     display: inline;
+}
+
+.span-2 {
+    grid-column: span 2;
 }
 
 .plaintext-button {
@@ -451,6 +457,10 @@ h6 {
 .center {
     text-align: center;
 }
+
+.left {
+    text-align: left;
+}  
 
 .margem-x {
     margin: 0 var(--spacing-gutter-medium);
